<resources>
    <string name="app_name">EnTuBarrioApp</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="et_Usuario"> Ingrese Usuario</string>
    <string name="et_Password"> Ingrese Password</string>

    <string name="bt_Ingresar">Iniciar</string>
    <string name="bt_Registrar">Registrarse</string>

    <string name="bt_TipoCliente">Cliente</string>
    <string name="bt_TipoNegocio">Negocio</string>

    <string name="bt_DatosNegocio">Guardar</string>
    <string name="bt_DatosCliente">Guardar</string>

    <string name="et_NombreNegocio"> Nombre</string>
    <string name="et_DireccionNegocio"> Direccion</string>
    <string name="et_TelefonoNegocio"> Telefono</string>
    <string name="et_PgWebNegocio"> Pagina Web</string>
    <string name="et_PasswordNegocio"> Password</string>

    <string name="et_NombreCliente"> Nombre Usuario</string>
    <string name="et_DireccionCliente"> Direccion</string>
    <string name="et_TelefonoCliente"> Telefono</string>
    <string name="et_EmailCliente"> Correo Electronico</string>
    <string name="et_PasswordCliente"> Password</string>

    <string name="etnombre">Inserte Nombre</string>
    <string name="etcodigo">Inserte Codigo</string>
    <string name="etprecio">Inserte Precio</string>

    <string name="tv_productos">Productos</string>
    <string name="tv_codigo">Código</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_precio">Precio</string>

    <string name="btn_guardar">Guardar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_buscar">Buscar</string>

    <!-- Ingreso Cliente -->
    <string name="btn_SalirC">Cerrar Sesión</string>
    <string name="tv_ProdC">Productos</string>
    <string name="tv_NegoC">Negocios</string>

    <!-- Item Producto CLiente -->
    <string name="btn_AddCard">+ Agregar</string>

    <!-- Ingreso Negocio -->
    <string name="btn_SalirN">Cerrar Sesión</string>
    <string name="tv_TusProd">Tus Productos</string>

</resources>