<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CrudProducto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_codigo"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/etcodigo"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:text="@string/btn_buscar" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/etnombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/etprecio"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_guardar" />

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_editar" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_eliminar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tv_productos"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_codigo"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_nombre"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_precio"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_pro"
        android:layout_width="match_parent"
        android:layout_height="239dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="Regresar" />

</LinearLayout>