<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistroCliente">

  <include android:id="@+id/toolbar"
      layout="@layout/toolbar" />
  <Button
      android:id="@+id/bt_DatosCliente"
      android:layout_width="141dp"
      android:layout_height="50dp"
      android:layout_marginStart="75dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="75dp"
      android:layout_marginBottom="85dp"
      android:onClick="registrarC"
      android:text="@string/bt_DatosCliente"
      app:backgroundTint="#705E80"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_PasswordCliente" />

  <EditText
      android:id="@+id/et_PasswordCliente"
      android:layout_width="261dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/et_PasswordCliente"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_EmailCliente" />

  <EditText
      android:id="@+id/et_TelefonoCliente"
      android:layout_width="261dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/et_TelefonoCliente"
      android:inputType="phone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_DireccionCliente" />

  <EditText
      android:id="@+id/et_DireccionCliente"
      android:layout_width="261dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/et_DireccionCliente"
      android:inputType="textPostalAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_NombreCliente" />

  <EditText
      android:id="@+id/et_NombreCliente"
      android:layout_width="261dp"
      android:layout_height="40dp"
      android:layout_marginTop="50dp"
      android:ems="10"
      android:hint="@string/et_NombreCliente"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_IngreseCliente" />

  <TextView
      android:id="@+id/tv_IngreseCliente"
      android:layout_width="245dp"
      android:layout_height="95dp"
      android:layout_marginTop="120dp"
      android:text="Bienvenido   Ingresa Tus Datos"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textSize="28sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/et_EmailCliente"
      android:layout_width="261dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/et_EmailCliente"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_TelefonoCliente" />
</androidx.constraintlayout.widget.ConstraintLayout>

