<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.InicioSesion">


    <EditText
        android:id="@+id/et_Usuario"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/et_Usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/et_Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Usuario" />

    <Button
        android:id="@+id/bt_Ingresar"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:alpha="50"
        android:onClick="ingresar"
        android:text="@string/bt_Ingresar"
        app:backgroundTint="#2F72B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <Button
        android:id="@+id/bt_Registrar"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:alpha="50"
        android:onClick="registrarse"
        android:text="@string/bt_Registrar"
        app:backgroundTint="#FF9F04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Ingresar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/entubarrio_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>