<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/tv_IngreseNegocio"
        android:layout_width="245dp"
        android:layout_height="95dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="83dp"
        android:text="Ingresa Los Datos De Tu Negocio"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_Bandera2"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:rotation="25"
        android:rotationY="-17"
        android:src="@drawable/flag_3574340_960_720"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_Logo3"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/entubarrio_logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_NombreNegocio"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/et_NombreNegocio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IngreseNegocio" />

    <EditText
        android:id="@+id/et_PgWebNegocio"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/et_PgWebNegocio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_TelefonoNegocio" />

    <EditText
        android:id="@+id/et_DireccionNegocio"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/et_DireccionNegocio"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_NombreNegocio" />

    <EditText
        android:id="@+id/et_TelefonoNegocio"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/et_TelefonoNegocio"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_DireccionNegocio" />

    <EditText
        android:id="@+id/et_PasswordNegocio"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/et_PasswordNegocio"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PgWebNegocio" />

    <Button
        android:id="@+id/bt_DatosNegocio"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="85dp"
        android:onClick="registrarN"
        android:text="@string/bt_DatosNegocio"
        app:backgroundTint="#705E80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PasswordNegocio" />
</androidx.constraintlayout.widget.ConstraintLayout>