<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IngresoCliente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_SaludoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_SalirC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:onClick="salirC"
                android:text="@string/btn_SalirC"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_NegC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:text="@string/tv_ProdC"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_ProdC"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:onClick="irProductos"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_NegoC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tv_NegoC"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_NegoC"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:onClick="irNegocios"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>